--- a/config.yml
+++ b/config.yml
@@ -44,13 +44,13 @@ collections:
       - { name: "alt", label: "Describe Thumbnail image in about 6 words", widget: "string", required: false }
       
       - name: "ingredients"
-        label: "Ingredients"
+        label: "Ingredients (each item on new line)"
         widget: "list"
         collapsed: true
         required: false
 
       - name: "instructions"
-        label: "Instructions"
+        label: "Instructions steps (each item on new line)"
         widget: "list"
         collapsed: true
         required: false 
