Use Marni_Deploy secret for deploy hook

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,6 @@ jobs:
         run: |
           curl -X POST "https://marni.hughfraser.co.uk/deploy-hook" \
             -H "Content-Type: application/json" \
-            -H "X-Deploy-Token: ${{ secrets.DEPLOY_TOKEN }}" \
+            -H "X-Deploy-Token: ${{ secrets.Marni_Deploy }}" \
             -d '{"site":"marni"}'
 
