--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,26 +5,22 @@ on:
     branches:
       - main
     paths:
-      - '**/*.md'
       - 'blog/**'
       - 'recipes/**'
       - 'pages/**'
       - 'static/**'
+      - '**/*.md'
 
 jobs:
   ping-deploy-hook:
-        runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest
     steps:
       - name: Call deploy hook
-        env:
-          DEPLOY_URL: https://marni.hughfraser.co.uk/deploy-hook
-          DEPLOY_TOKEN: ${{ secrets.Marni_Deploy }}
         run: |
-          echo "Pinging $DEPLOY_URL..."
-          curl -sS -v -f "$DEPLOY_URL" \
+          echo "Pinging deploy hook..."
+          curl -sS -v -f "https://marni.hughfraser.co.uk/deploy-hook" \
             -H "Content-Type: application/json" \
-            -H "X-Deploy-Token: $DEPLOY_TOKEN" \
+            -H "X-Deploy-Token: ${{ secrets.Marni_Deploy }}" \
             -d '{"site":"marni"}'
           echo "Deploy hook pinged successfully."
 
