--- a/config.yml
+++ b/config.yml
@@ -179,3 +179,11 @@ collections:
             search_fields: ["title"]
             value_field: "slug"
             display_fields: ["title"]
+
+          
+
+        - label: "Heading Font"
+          name: "fontFamily"
+          widget: "string"
+          default: "Frauncis"
+          required: true
