--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,7 @@
-backend:
-  name: github
-  repo: storynory/marni-content
-  branch: main
-  base_url: https://sveltia-cms-auth.hugh-6ba.workers.dev
+name: github
+repo: storynory/marni-content
+branch: main
+base_url: https://sveltia-cms-auth.hugh-6ba.workers.dev
 publish_mode: editorial_workflow
 
 media_folder: "static/uploads"
@@ -11,7 +10,6 @@ public_folder: "/uploads"
 media_libraries:
   default:
     config:
-      # (Optional, but helpful) make sure your UI accepts typical image types
       accept_mime_types:
         - image/jpeg
         - image/png
@@ -20,14 +18,17 @@ media_libraries:
 
       transformations:
         raster_image:
-          format: webp      # only 'webp' is supported
-          quality: 85       # default 85
-          width: 2048       # max width (no upscaling)
-          height: 2048      # max height (no upscaling)
+          format: webp
+          quality: 85
+          width: 2048
+          height: 2048
         svg:
           optimize: true
 
 collections:
+  # ------------------------------------------------
+  # Recipes
+  # ------------------------------------------------
   - name: "recipes"
     label: "Recipes"
     folder: "recipes"
@@ -41,8 +42,8 @@ collections:
       - { name: "body", label: "Recipe Notes", widget: "markdown", required: false }
       - { name: "date", label: "Date", widget: "datetime", required: false }
       - { name: "thumbnail", label: "Thumbnail", widget: "image", required: false }
-      - { name: "alt", label: "Describe Thumbnail image in about 6 words", widget: "string", required: false }
-      
+      - { name: "alt", label: "Describe Thumbnail image", widget: "string", required: false }
+
       - name: "ingredients"
         label: "Ingredients (each item on new line)"
         widget: "list"
@@ -53,10 +54,10 @@ collections:
         label: "Instructions steps (each item on new line)"
         widget: "list"
         collapsed: true
-        required: false 
-        
+        required: false
+
       - { name: "methodNotes", label: "Method Notes", widget: "markdown", class: "method-field", required: false }
-     
+
       - name: "tags"
         label: "Tags"
         widget: "relation"
@@ -71,13 +72,15 @@ collections:
         label: "Season"
         widget: "relation"
         collection: "seasons"
-        multiple: true      # keep true so a recipe can belong to more than one season
+        multiple: true
         required: false
         search_fields: ["title"]
         value_field: "slug"
         display_fields: ["title"]
 
-    
+  # ------------------------------------------------
+  # Blog
+  # ------------------------------------------------
   - name: "blog"
     label: "Blog"
     folder: "blog"
@@ -92,6 +95,9 @@ collections:
       - { name: "body", label: "Body", widget: "markdown", required: false }
       - { name: "draft", label: "Draft", widget: "boolean", default: true, required: false }
 
+  # ------------------------------------------------
+  # Pages
+  # ------------------------------------------------
   - name: "pages"
     label: "Pages"
     folder: "pages"
@@ -106,8 +112,9 @@ collections:
       - { name: "body", label: "Body", widget: "markdown", required: false }
       - { name: "draft", label: "Draft", widget: "boolean", default: true, required: false }
 
-
-
+  # ------------------------------------------------
+  # Tags
+  # ------------------------------------------------
   - name: "tags"
     label: "Tags"
     folder: "tags"
@@ -126,6 +133,9 @@ collections:
 
       - { name: "draft", label: "Draft", widget: "boolean", default: false, required: false }
 
+  # ------------------------------------------------
+  # Seasons
+  # ------------------------------------------------
   - name: "seasons"
     label: "Seasons"
     folder: "seasons"
@@ -142,77 +152,79 @@ collections:
         widget: "image"
         required: false
 
-# ------------------------------------------------
-# Site settings singleton
-# ------------------------------------------------
-- name: "settings"
-  label: "Site Settings"
-  delete: false
-  editor:
-    preview: false
-  files:
-    - file: "settings/site.md"
-      label: "Site Settings"
-      name: "site"
+  # ------------------------------------------------
+  # Colour Schemes (new collection)
+  # ------------------------------------------------
+  - name: "colour-schemes"
+    label: "Colour Schemes"
+    folder: "colour-schemes"
+    create: true
+    slug: "{{slug}}"
 
-      fields:
-        - { name: "title", label: "Internal Title", widget: "hidden", default: "Site settings" }
+    fields:
+      - { name: "title", label: "Scheme Name", widget: "string" }
+      - { label: "Prime",   name: "prime",   widget: "color", default: "#e3d2b7" }
+      - { label: "Accent",  name: "accent",  widget: "color", default: "#00634e" }
+      - { label: "Second",  name: "second",  widget: "color", default: "#f4e8d7" }
+      - { label: "Gray",    name: "gray",    widget: "color", default: "#f8f9fa" }
+      - { label: "Text",    name: "text",    widget: "color", default: "#333333" }
 
-        # ------------------------------------------
-        # MAIN SETTINGS (grouped)
-        # ------------------------------------------
-        - label: "Main Settings"
-          name: "main"
-          widget: "object"
-          collapsed: false
-          fields:
-            - { name: "siteTitle", label: "Site Title", widget: "string" }
-            - { name: "siteTagline", label: "Site Tagline", widget: "string", required: false }
-            - { name: "siteIntroTitle", label: "Site Intro Title (Hero section on home page)", widget: "string", required: false }
-            - { name: "siteIntro", label: "Site Intro (Hero Text)", widget: "text", required: false }
-            - { name: "blogPageIntro", label: "Intro at top of Blog Page", widget: "text", default: "default text", required: false }
-            - { name: "seasonsPageIntro", label: "Intro at top of Seasons Page", widget: "text", required: false }
-            - { name: "recipesPageIntro", label: "Intro at top of Recipes Page", widget: "text", required: false }
+  # ------------------------------------------------
+  # Site settings singleton
+  # ------------------------------------------------
+  - name: "settings"
+    label: "Site Settings"
+    delete: false
+    editor:
+      preview: false
 
-            - name: "portrait"
-              label: "Hero Portrait for Front Page"
-              widget: "image"
-              required: false
+    files:
+      - file: "settings/site.md"
+        label: "Site Settings"
+        name: "site"
 
-            - name: "featuredSeason"
-              label: "Featured Season (for homepage, none is fine)"
-              widget: "relation"
-              collection: "seasons"
-              multiple: false
-              required: false
-              search_fields: ["title"]
-              value_field: "slug"
-              display_fields: ["title"]
+        fields:
+          - { name: "title", label: "Internal Title", widget: "hidden", default: "Site settings" }
 
-            # SELECT ACTIVE COLOUR SCHEME
-            - label: "Active Colour Scheme"
-              name: "activeScheme"
-              widget: "select"
-              options: "{{colourSchemes.map(s => s.name)}}"
-              required: false
+          # MAIN SETTINGS (group)
+          - label: "Main Settings"
+            name: "main"
+            widget: "object"
+            collapsed: false
+            fields:
+              - { name: "siteTitle", label: "Site Title", widget: "string" }
+              - { name: "siteTagline", label: "Site Tagline", widget: "string", required: false }
+              - { name: "siteIntroTitle", label: "Site Intro Title", widget: "string", required: false }
+              - { name: "siteIntro", label: "Site Intro (Hero Text)", widget: "text", required: false }
+              - { name: "blogPageIntro", label: "Intro at top of Blog Page", widget: "text", default: "default text", required: false }
+              - { name: "seasonsPageIntro", label: "Intro at top of Seasons Page", widget: "text", required: false }
+              - { name: "recipesPageIntro", label: "Intro at top of Recipes Page", widget: "text", required: false }
 
-            - { name: "fontFamily", label: "Header Font", widget: "select",
-                options: ["Baloo 2", "Comfortaa", "Fraunces", "Quicksand", "Varela Round", "Delius"] }
+              - name: "portrait"
+                label: "Hero Portrait for Front Page"
+                widget: "image"
+                required: false
 
+              - name: "featuredSeason"
+                label: "Featured Season (for homepage)"
+                widget: "relation"
+                collection: "seasons"
+                multiple: false
+                required: false
+                search_fields: ["title"]
+                value_field: "slug"
+                display_fields: ["title"]
 
-        # ------------------------------------------
-        # COLOUR SCHEMES SECTION
-        # ------------------------------------------
-        - label: "Colour Schemes"
-          name: "colourSchemes"
-          widget: "list"
-          collapsed: true
-          summary: "{{name}}"
-          fields:
-            - { label: "Scheme Name", name: "name", widget: "string" }
-            - { label: "Prime",   name: "prime",   widget: "color", default: "#e3d2b7", allowInput: true }
-            - { label: "Accent",  name: "accent",  widget: "color", default: "#00634e", allowInput: true }
-            - { label: "Second",  name: "second",  widget: "color", default: "#f4e8d7", allowInput: true }
-            - { label: "Gray",    name: "gray",    widget: "color", default: "#f8f9fa", allowInput: true }
-            - { label: "Text",    name: "text",    widget: "color", default: "#333333", allowInput: true }
+              - label: "Active Colour Scheme"
+                name: "activeScheme"
+                widget: "relation"
+                collection: "colour-schemes"
+                multiple: false
+                required: false
+                search_fields: ["title"]
+                value_field: "slug"
+                display_fields: ["title"]
+
+              - { name: "fontFamily", label: "Header Font", widget: "select",
+                  options: ["Baloo 2", "Comfortaa", "Fraunces", "Quicksand", "Varela Round", "Delius"] }
 
