--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,9 @@
-name: github
-repo: storynory/marni-content
-branch: main
-base_url: https://sveltia-cms-auth.hugh-6ba.workers.dev
-publish_mode: editorial_workflow
+backend:
+   name: github
+   repo: storynory/marni-content
+   branch: main
+   base_url: https://sveltia-cms-auth.hugh-6ba.workers.dev
+   publish_mode: editorial_workflow
 
 media_folder: "static/uploads"
 public_folder: "/uploads"
