--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,10 @@
 backend:
-   name: github
-   repo: storynory/marni-content
-   branch: main
-   base_url: https://sveltia-cms-auth.hugh-6ba.workers.dev
-   publish_mode: editorial_workflow
+  name: github
+  repo: storynory/marni-content
+  branch: main
+  base_url: https://sveltia-cms-auth.hugh-6ba.workers.dev
+
+publish_mode: editorial_workflow
 
 media_folder: "static/uploads"
 public_folder: "/uploads"
@@ -79,6 +80,7 @@ collections:
         value_field: "slug"
         display_fields: ["title"]
 
+
   # ------------------------------------------------
   # Blog
   # ------------------------------------------------
@@ -96,6 +98,7 @@ collections:
       - { name: "body", label: "Body", widget: "markdown", required: false }
       - { name: "draft", label: "Draft", widget: "boolean", default: true, required: false }
 
+
   # ------------------------------------------------
   # Pages
   # ------------------------------------------------
@@ -112,6 +115,7 @@ collections:
       - { name: "excerpt", label: "Excerpt", widget: "text", required: false }
       - { name: "body", label: "Body", widget: "markdown", required: false }
       - { name: "draft", label: "Draft", widget: "boolean", default: true, required: false }
+
 
   # ------------------------------------------------
   # Tags
@@ -134,6 +138,7 @@ collections:
 
       - { name: "draft", label: "Draft", widget: "boolean", default: false, required: false }
 
+
   # ------------------------------------------------
   # Seasons
   # ------------------------------------------------
@@ -153,6 +158,7 @@ collections:
         widget: "image"
         required: false
 
+
   # ------------------------------------------------
   # Colour Schemes (new collection)
   # ------------------------------------------------
@@ -170,8 +176,9 @@ collections:
       - { label: "Gray",    name: "gray",    widget: "color", default: "#f8f9fa" }
       - { label: "Text",    name: "text",    widget: "color", default: "#333333" }
 
+
   # ------------------------------------------------
-  # Site settings singleton
+  # Site Settings
   # ------------------------------------------------
   - name: "settings"
     label: "Site Settings"
@@ -187,7 +194,6 @@ collections:
         fields:
           - { name: "title", label: "Internal Title", widget: "hidden", default: "Site settings" }
 
-          # MAIN SETTINGS (group)
           - label: "Main Settings"
             name: "main"
             widget: "object"
